--- a/_posts/article 1/Article 1.Rmd
+++ b/_posts/article 1/Article 1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Venom"
+title: "Article 1"
 description: |
   "Bizarre caecilians may be the only amphibians with venomous bites"
 author:
