--- a/_posts/article 1/Article 1.Rmd
+++ b/_posts/article 1/Article 1.Rmd
@@ -21,34 +21,33 @@ knitr::opts_chunk$set(echo = FALSE)
 
 
 
-[lien de l'arcticle en question](https://www.sciencenews.org/article/caecilians-amphibians-venomous-bites)
+Link to article: [click here](https://www.sciencenews.org/article/caecilians-amphibians-venomous-bites)
+Publish on 3 july 2020
 ![](images/jpg120051fa.png)
 
-This post is an analysis of Analysis of *More than 6,000 antibiotic resistance genes discovered in the bacteria that inhabit the human gut* [@UniversityofBirmingham]. 
 
 
-## Summary 
+## vocabulary:
 
-Bacterium adaptation to the surrounding environment is an undeniable and growing phenomenon. Nevertheless, some of these adaptations concern researchers because they pose a real threat to human health and are the origin of an increasing number of deaths each year.
+| word from the text | synonym/definition in english                                                                      | french translation |
+|--------------------|----------------------------------------------------------------------------------------------------|--------------------|
+| skin               | skin is the layer of usually soft, flexible outer  tissue covering the body of a vertebrate animal | la peau            |
+| tails              | Extension of the spine of many animals                                                             | la queue           |
+| protrusions        | Hump-shaped protrusion on the surface of a bone                                                    | protubérance       |
+| grooves            | Small notch                                                                                        | rainure            |
+| ooze               | Going out, flowing almost imperceptibly, talking about a liquid.                                   | suinter            |
+| subdue             | To govern someone with absolute authority.                                                         | maitriser          |
+| weapons            | What is used to attack, to defend oneself                                                          | arme               |
 
-Are all these bacteria originally dangerous? It’s a halftone answer. On the one hand, some bacteria have caused deadly infectious diseases for centuries such as staph but their rising dangerousness over the years is only the result of human errors. Where bacteria adapt to human innovations in order to survive, human has increasingly difficulties to counter the adaptive response of bacteria. The phenomenon is extremely important in the case of drug-resistant bacteria called “superbugs”. By prescribing antibiotics in an abusive way, bacteria have gradually succeeded, by their defense mechanisms such as the horizontal genes transfer or the transformation of their body wall, in dodging them to such an extent that some antibiotics, such as the Vancomycin, are totally useless against some bacteria.
+## Analysis table about the study:
 
+| Questions                             | answers                                                                                                                            |
+|------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------|
+| Researchers                        | Pedro Mailho-fontana with fellow evolutionary biologists Marta Antoniazzi and Carlos Jared in the Butantan Institute in São Paulo |
+| Published in? When? (if mentioned) | Published online July 3, 2020                                                                                                     |
+| General topics                     | The caelicians, the only venomous amphibians.                                                                                     |
+| Procedure/ what was examined       | Direct study of caecilians by dissection.                                                                                         |
+| Conclusions,  discovery.           | Ceacilians have a mucus-secreting gland as well as ducts going to the teeth that allow them to inject it.                         |
+| Remaining questions                | Is their venom dangerous? If so, are there any remedies?                                                                          |
 
-## Vocabulary: 
-
-| Words from the text 	| Synonym / explanation in English 	|
-|:-------------------:	|:--------------------------------:	|
-|      To inhabit     	|       To live in            	|
-|         Gut         	|       Intestine            	|
-
-## Analysis table
-
-| Basic article information 	| / 	|
-|------------------------------	|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------	|
-| Researchers 	| Etienne Ruppé, Amine Ghozlane, Julien Tap, Nicolas Pons, Anne- Sophie Alvarez, Nicolas Maziers, Trinidad Cuesta, Sara Hernando- Amado, Irene Clares, Jose Luís Martínez, Teresa M. Coque, Fernando Baquero, Val F. Lanza, Luis Máiz, Tiphaine Goulenok, Victoire de Lastours, Nawal Amor, Bruno Fantin, Ingrid Wieder, Antoine Andremont, Willem van Schaik, Malbert Rogers, Xinglin Zhang, Rob J. L. Willems, Alexandre G. de Brevern, Jean-Michel Batto, Hervé M. Blottière, Pierre Léonard, Véronique Léjard, Aline Letur, Florence Levenez, Kevin Weiszer, Florence Haimet, Joël Doré, Sean P. Kennedy & S. Dusko Ehrlich           	|
-| Published in? 	| November 30, 2018 	|
-| General topic? 	| A team of European researchers has developed an innovativemethod to identify antibiotic resistance genes produced by the bacteria	|
-| Procedure/what was examined? 	| The method consists of comparing the proteins produced by the bacteriafound in the human intestine, tostructures of antibiotic resistance enzymes already identified.Then, researchers have applied this innovative technique tomillions of genes located in the gut. 	|
-| Conclusions/discovery? 	| Thanks to this approach, no more than 6000 new antibiotic resistance genes have been discovered. Nevertheless, thehuman gut is also a place of living for several pathogenicbacteria which are increasingly resistant to antibiotics.|
-| Remaining questions? 	| Could these resistance genes be transferred to pathogenic bacteria by using antibiotics? Could this phenomenon reduce the effectiveness of antibiotics in the future? 	|
 
