--- a/_posts/article 2/Article 2.Rmd
+++ b/_posts/article 2/Article 2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Article 2"
 description: |
- 
+ "Some spiders may spin poisonous webs laced with neurotoxins"
 author:
   - name: "Joséphine Dumortier"
 date: "`r Sys.Date()`"
