--- a/articles.Rmd
+++ b/articles.Rmd
@@ -6,6 +6,8 @@ listing:
     - article 1
     - article 2
     - article 3
+    - article 4
+    - article 5
 ---
 
 ```{r, echo = FALSE, eval = FALSE}
