--- a/_posts/article 1/Article 1.Rmd
+++ b/_posts/article 1/Article 1.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Article 1"
+title: "Article 1 :Bizarre caecilians may be the only amphibians with venomous bites."
 description: |
-  "Some spiders may spin poisonous webs laced with neurotoxins"
+  
 author:
   - name: "Joséphine Dumortier"
 date: "`r Sys.Date()`"
