--- a/_posts/article 3/Article 3.Rmd
+++ b/_posts/article 3/Article 3.Rmd
@@ -7,7 +7,7 @@ categories:
   - "Venom research"
 preview: images/jpg120051fa.png
 #draft: TRUE
-bibliography: 
+#bibliography: 
 output:
   distill::distill_article:
     self_contained: false
