--- a/_posts/Article1/Article1.Rmd
+++ b/_posts/Article1/Article1.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Article 1: Bizarre caecilians may be the only amphibians with venomous bites."
+title: "Article 5: What Should You Do If You're Bitten by a Venomous Snake?"
 author:
   - name: "Joséphine Dumortier"
 date: "`r Sys.Date()`"
@@ -7,7 +7,7 @@ categories:
   - "Venom research"
 preview: images/jpg120051fa.png
 #draft: TRUE
-#bibliography:
+#bibliography: 
 output:
   distill::distill_article:
     self_contained: false
@@ -20,37 +20,25 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Source
 
-Link to article: [click here](https://www.sciencenews.org/article/caecilians-amphibians-venomous-bites)
+Link to article: [click here](https://www.livescience.com/65614-what-if-bitten-by-snake.html)
 
-Published on 3 july 2020
+Published on june 02, 2019
 
-Number of words :641
+Number of words : 1 000
+
+A bieutiful and dangerous snake: ![Credit: ](https://cdn.mos.cms.futurecdn.net/vFTPfvynPrrSxDEs4pdh38-970-80.jpg)
  
-This is what this little amphibian looks like: ![comes from ScienceNew,CarlosJared](https://www.sciencenews.org/wp-content/uploads/2020/07/070120_cw_caecilian_feat-1028x579.jpg)
-
-
-
 ## vocabulary:
 
-| word from the text | synonym/definition in english                                                                      | french translation |
-|--------------------|----------------------------------------------------------------------------------------------------|--------------------|
-| skin               | skin is the layer of usually soft, flexible outer  tissue covering the body of a vertebrate animal | la peau            |
-| tails              | Extension of the spine of many animals                                                             | la queue           |
-| protrusions        | Hump-shaped protrusion on the surface of a bone                                                    | protubérance       |
-| grooves            | Small notch                                                                                        | rainure            |
-| ooze               | Going out, flowing almost imperceptibly, talking about a liquid.                                   | suinter            |
-| subdue             | To govern someone with absolute authority.                                                         | maitriser          |
-| weapons            | What is used to attack, to defend oneself                                                          | arme               |
+
 
 ## Analysis table about the study:
 
-| Questions                             | answers                                                                                                                            |
-|------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------|
-| Researchers                        | Pedro Mailho-fontana with fellow evolutionary biologists Marta Antoniazzi and Carlos Jared in the Butantan Institute in São Paulo |
-| Published in? When? (if mentioned) | Published online July 3, 2020                                                                                                     |
-| General topics                     | The caelicians, the only venomous amphibians.                                                                                     |
-| Procedure/ what was examined       | They studied this animal by dissecting it, then it worked as a team with other scientists to get their opinion.                         |
-| Conclusions,  discovery.           | Ceacilians have a mucus-secreting gland as well as ducts going to the teeth that allow them to inject it.                         |
-| Remaining questions                | Is their venom dangerous? If so, are there any remedies?                                                                          |
-
-
+| Ask                                | Answer                                                                                                                                                       |
+|------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Researchers                        | Dr Nicholas Kman professor of emergency medicine at the ohio state university wexner  medical center. Dr Dan Brooks, medical director in Phoenix.            |
+| Published in? When? (if mentioned) | Live science                                                                                                                                                 |
+| General topics                     | Dos and don'ts of getting bitten by a venom snake                                                                                                            |
+| Procedure/ what was examined       | /                                                                                                                                                            |
+| Conclusions,  discovery.           | The best is to stay calm, he especially does not  suck the venom or cut the infected limb. watch for redness, swelling, blisters, heat,  nausea and vomiting |
+| Remaining questions                | /                                                                                                                                                            |
