--- a/_posts/about/about.Rmd
+++ b/_posts/about/about.Rmd
@@ -7,9 +7,16 @@ output: distill::distill_article
 ---
 
 hello every one!!
+
 I'll introduce myself my name is Joséphine Dumortier I'm in second bachelor in Biologie at UMons in Belgium.
+
+Before, I did a year at Louvain La Neuve in the veterinary section. It was super interesting but it was not for me...
+
 This year I am taking the English course of Mrs. Ingrid Van Lancker.
+
 After my study I would like to teach at the end of secondary school in biology and chemistry.
-This section must bu include a short presentation of you.
+
+Even Thurday evening and Sunday morning I give lessons in a dog club. I love that.
+The funniest thing is that we realize that it is more complicated to teach the master than the dog.
 
 
